# SupernovaStudios

./: App.test.js  app.json  package.json
App/: .js
App/Lander/: Lander.js  Template1.js  Template2.js  Template3.js  Template4.js
App/Locales/: en.json  i18n.js
App/PDP/: PDP.js
youi/: CMakeLists.txt  SourceList.cmake  build.rb  build_all.rb  generate.rb  reinstall.rb
youi/src/: App.cpp  AppFactory.cpp
